include dataframe creation of embedding data

--- a/FaceNet_exploration.ipynb
+++ b/FaceNet_exploration.ipynb
@@ -25,10 +25,12 @@
         "import numpy as np\n",
         "from PIL import Image\n",
         "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "from google.colab import files\n",
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": 117,
       "outputs": []
     },
     {
@@ -78,6 +80,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KBQjKbR_euBr"
+      },
+      "source": [
+        "csv_path = 'database_embedding.csv'"
+      ],
+      "execution_count": 118,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1560,6 +1573,388 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZaLL7i7vshSj"
+      },
+      "source": [
+        "data_dict = {img_path: np.asarray(result[0])}"
+      ],
+      "execution_count": 143,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "id": "u4GjdOMDft2L",
+        "outputId": "c498f892-474d-44ca-e990-508296e99ed9"
+      },
+      "source": [
+        "df = pd.DataFrame.from_dict(data_dict)\n",
+        "df"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>gdrive/MyDrive/ew.jpg</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.669083</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.440388</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.112407</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-0.075918</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.651510</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>123</th>\n",
+              "      <td>-0.574617</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>124</th>\n",
+              "      <td>-1.017687</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>125</th>\n",
+              "      <td>-1.141586</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>126</th>\n",
+              "      <td>-0.452057</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>127</th>\n",
+              "      <td>-1.825386</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>128 rows × 1 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     gdrive/MyDrive/ew.jpg\n",
+              "0                 1.669083\n",
+              "1                -0.440388\n",
+              "2                 0.112407\n",
+              "3                -0.075918\n",
+              "4                 0.651510\n",
+              "..                     ...\n",
+              "123              -0.574617\n",
+              "124              -1.017687\n",
+              "125              -1.141586\n",
+              "126              -0.452057\n",
+              "127              -1.825386\n",
+              "\n",
+              "[128 rows x 1 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 146
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OG6DWo-ujPEc"
+      },
+      "source": [
+        "df.to_csv(csv_path, index=False)\n"
+      ],
+      "execution_count": 149,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "AuKRaMj4f3kS",
+        "outputId": "b383b270-2ce0-459b-a873-f0883b1a68fc"
+      },
+      "source": [
+        "files.download(csv_path)"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "download(\"download_01b8eaa1-9d14-4d9f-9aa6-cc10265e911e\", \"database_embedding.csv\", 1414)"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "id": "x7x2ZNLdiWjr",
+        "outputId": "fcd1415a-1c3d-474a-f794-e395129e4f25"
+      },
+      "source": [
+        "df2 = pd.read_csv(csv_path)\n",
+        "df2"
+      ],
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>gdrive/MyDrive/ew.jpg</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.669083</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.440388</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.112407</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-0.075918</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.651510</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>123</th>\n",
+              "      <td>-0.574617</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>124</th>\n",
+              "      <td>-1.017687</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>125</th>\n",
+              "      <td>-1.141586</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>126</th>\n",
+              "      <td>-0.452057</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>127</th>\n",
+              "      <td>-1.825386</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>128 rows × 1 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     gdrive/MyDrive/ew.jpg\n",
+              "0                 1.669083\n",
+              "1                -0.440388\n",
+              "2                 0.112407\n",
+              "3                -0.075918\n",
+              "4                 0.651510\n",
+              "..                     ...\n",
+              "123              -0.574617\n",
+              "124              -1.017687\n",
+              "125              -1.141586\n",
+              "126              -0.452057\n",
+              "127              -1.825386\n",
+              "\n",
+              "[128 rows x 1 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 152
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ss0DVrm1lm1l",
+        "outputId": "8123ab3d-4a1e-4f09-a36c-d3a994d12de5"
+      },
+      "source": [
+        "for label, content in df.items():\n",
+        "  print(label, np.array(content)[np.newaxis, ...])"
+      ],
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "gdrive/MyDrive/ew.jpg [[ 1.6690828  -0.4403884   0.11240684 -0.07591762  0.6515102  -1.6074872\n",
+            "   1.4014131  -0.51546234 -2.204006    0.64016557  0.46019864  0.39666432\n",
+            "   2.1311235  -0.896345    0.44543386  1.8102713   0.4057899  -0.6215044\n",
+            "  -1.5957518   1.2531588  -0.35040194  0.15155031  1.6801971   0.27975252\n",
+            "  -0.3915464   0.7183587   1.862203   -0.45136583  0.8471596  -0.88195294\n",
+            "  -0.45216724 -0.27195317 -0.06321996 -0.33107635 -1.1200593  -0.05866021\n",
+            "   0.46966946  0.6908024  -0.00422741 -0.34136963 -1.1753278   0.40177995\n",
+            "   0.27862734  0.75906825  0.5916544  -0.41998416  0.49790123 -0.03151143\n",
+            "   0.58206296 -0.49381462 -1.0512494  -1.1567047  -2.0584126   0.9042316\n",
+            "  -0.01934882  0.33429396  0.7704474   2.4381976   0.28657535  0.1434843\n",
+            "  -1.4198534   0.50154054 -0.78757983  1.2133889  -0.75363934  0.9970385\n",
+            "  -0.8527552  -1.4638453   0.220049    0.79464847 -1.2060602   0.63601995\n",
+            "   0.13092747  1.3808508   1.6237128  -0.771576   -2.4622636  -0.04773344\n",
+            "   0.5020845  -1.0468477  -0.9313246  -0.10937935  0.10631436  0.3433487\n",
+            "   0.9901529   1.1832566   0.6342775  -0.82804084 -0.1685246  -0.85592085\n",
+            "   0.49582788  0.8995519   0.89118594 -2.5171092   0.6268393   1.0294607\n",
+            "   0.01034591 -2.5060856   0.13310872 -2.1330855  -2.2660816   0.41888362\n",
+            "  -0.707405   -0.17288691  1.9334075  -0.8633102   1.2850325   0.04119437\n",
+            "   1.0670528   0.30365014  0.2659544   0.149657    0.5046293   0.4220444\n",
+            "  -0.28598195  1.8389829  -0.97508013  1.1463859  -0.41015723 -1.148217\n",
+            "   1.2590176  -0.45315444  0.2218453  -0.5746172  -1.0176871  -1.1415857\n",
+            "  -0.45205665 -1.825386  ]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zuv9yF4ml9xs"
       },
       "source": [
         ""
